# Glee

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  conda_setup.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yml
AI/: Img_OCR.py  No_Img.py  app.py  case_5.py  config_No_Img.yaml  config_OCR.yaml  glee_agent.py  main.py  no_img_ai.py  ocr_v2.py  tmp.py  videosearch_service.py
AI/config/: config_New_Reply_Suggestions.yaml  config_No_Img.yaml  config_Reply_Suggestions.yaml  config_Situation_Summary.yaml  config_Style_Analysis.yaml  config_Title_Suggestion.yaml  config_case5.yaml
AI/services/: title_suggestion.py  videosearch_service.py
AI/services/Agent/: example_usage.py  feedback_agent.py  image_pre_processor.py  ocr_agent.py  ocr_cache.py  ocr_post_processing_agent.py  orchestrator_agent.py  reply_suggestion_agent.py  style_analysis_agent.py  summarizer_agent.py  title_suggestion_agent.py
AI/services/Analysis/: analyze_situation.py
AI/services/Generation/: reply_seggestion.py  title_suggestion.py
AI/services/OCR/: clova_ocr.py  get_ocr_text.py
AI/services/agent/: example_usage.py  feedback_agent.py  ocr_agent.py  ocr_cache.py  orchestrator_agent.py  style_analysis_agent.py
AI/services/analysis/: analyze_situation.py
AI/services/generation/: title_suggestion.py
AI/services/ocr/: clova_ocr.py
AI/tests/: __init__.py  conftest.py  test_ai_services.py  test_glee_agent.py  test_ocr_services.py
AI/utils/: deduplicate_sentence.py  get_embeddings.py  get_headers_payloads.py  image_dto.py  ocr_postprocessing.py  services.py
ai/: glee_agent.py
ai/config/: config_no_Img.yaml  config_reply_suggestions.yaml  config_reply_suggestions_accent_purpose.yaml  config_situation_summary.yaml  config_style_analysis.yaml  config_title_suggestion.yaml
ai/services/agent/: example_usage.py  image_pre_processor.py  ocr_agent.py  orchestrator_agent.py  reply_suggestion_agent.py  style_analysis_agent.py  summarizer_agent.py  title_suggestion_agent.py
ai/services/analysis/: analyze_situation.py
ai/services/generation/: reply_seggestion.py  title_suggestion.py
ai/services/ocr/: clova_ocr.py
ai/utils/: deduplicate_sentence.py  get_embeddings.py  get_headers_payloads.py  services.py
app/: exceptions.py  main.py
app/analyze/: analyze_request.py  analyze_response.py  analyze_router.py
app/auth/: auth_request.py  auth_response.py  auth_router.py  auth_service.py  kakao_rest_api_example.py  schemas.py
app/core/: enums.py  settings.py
app/db/: database.py  models.py
app/history/: history_collection.py  history_document.py  history_response.py  history_router.py  history_service.py
app/routers/: auth_router.py
app/services/: auth_service.py
app/suggester/: enums.py  suggester_collection.py  suggester_document.py  suggester_request.py  suggester_response.py  suggester_router.py  suggester_service.py
app/user/: user_collection.py  user_document.py  user_dto.py  user_service.py
app/utils/: api_header_validator.py  jwt_handler.py  jwt_payload.py  mongo.py
app/utils/models/: base_document.py  suggestion.py
templates/: index.html
test/: __init__.py  conftest.py
test/AI/: test_ai_services.py  test_glee_agent.py  test_videosearch_service.py
test/ai/: test_ai_services.py  test_glee_agent.py  test_videosearch_service.py
test/auth/: test_auth_router.py  test_auth_service.py
test/history/: test_history_router.py  test_history_service.py
test/suggester/: test_suggester_router.py  test_suggester_service.py
tests/: __init__.py  conftest.py  test_glee_agent.py
vector_store/: chroma.sqlite3
